--- a/app/tpls/modal/addNewScene.html
+++ b/app/tpls/modal/addNewScene.html
@@ -4,30 +4,20 @@
 	</div>
 	<div class="modal-body">
 		<ul class="titleUl">
-			<li class="clearfix">
-				<div class="popLeft">
-					场景名称：
-				</div>
-				<div class="popRight">
-					<input type="text" name="" id="" value="" />
-				</div>
+			<li class="clearfix">				
+				<h1>场景名称：</h1>								
+				<input type="text" name="" id="" value="" class="inputText ng-pristine ng-invalid ng-invalid-required" style="width: 400px;" required="required"/>				
 			</li>
-			<li class="clearfix">
-				<div class="popLeft">
-					附件：
-				</div>
+			<li class="clearfix">				
+				<h1>附件：</h1>				
 				<div class="popRight">
 					<input type="file" name="" id="" value="上传" class="fileInput" />
 					<span class="fileUpload btn_gray">上传</span>
 				</div>
 			</li>
 			<li class="clearfix">
-				<div class="popLeft">
-					需求描述：
-				</div>
-				<div class="popRight">
-					<textarea name="" rows="" cols=""></textarea>
-				</div>
+				<h1>需求描述：</h1>							
+				<textarea name="" rows="" cols="" class="projectTextarea floatleft" style="width: 400px;"></textarea>				
 			</li>
 		</ul>
 	</div>
