--- a/app/tpls/home/main/usecase/projectUsecaseDetail.html
+++ b/app/tpls/home/main/usecase/projectUsecaseDetail.html
@@ -61,7 +61,7 @@
 		</div>
 		<div class="attribute" ng-show="isAttribute==1">
 			<div class="attributeTitle" ng-controller="modalCtrl">
-				<input class="btn_gray " type="button" name="" id="" value="新增场景" ng-click="open('addNewScene','')" />
+				<input class="btn_gray " type="button" name="" id="" value="新增场景" ng-click="open('addNewScene','lg')" />
 			</div>
 			<table class="table-fullborder">
 				<tr>
