--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -23,7 +23,7 @@
 			</ul>
 		</div>
 		<div class="floatright" ng-controller="modalCtrl">
-			<input class="btn_gray " type="button" name="" id="" value="提需求" ng-click="open('newDemand')" />
+			<input class="btn_gray " type="button" name="" id="" value="提需求" ng-click="open('newDemand','lg')" />
 		</div>
 	</div>
 	<div>		
