--- a/app/tpls/modal/addNewScene.html
+++ b/app/tpls/modal/addNewScene.html
@@ -6,7 +6,8 @@
 		<ul class="titleUl">
 			<li class="clearfix">				
 				<h1>场景名称：</h1>								
-				<input type="text" name="" id="" value="" class="inputText ng-pristine ng-invalid ng-invalid-required" style="width: 400px;" required="required"/>				
+				<input type="text" name="" id="" value="" class="inputText"  required="required"/>		
+				<span class="error">错误提示错误提示错误提示</span>
 			</li>
 			<li class="clearfix">				
 				<h1>附件：</h1>				
@@ -17,7 +18,8 @@
 			</li>
 			<li class="clearfix">
 				<h1>需求描述：</h1>							
-				<textarea name="" rows="" cols="" class="projectTextarea floatleft" style="width: 400px;"></textarea>				
+				<textarea name="" rows="" cols="" class="projectTextarea floatleft" ></textarea>	
+				<span class="error">错误提示错误提示错误提示</span>
 			</li>
 		</ul>
 	</div>
