--- a/app/tpls/home/projectNav.html
+++ b/app/tpls/home/projectNav.html
@@ -2,7 +2,7 @@
 
 
 </style>
-<div class="projectNav">
+<div class="projectNav" style="overflow: hidden;">
     <div class="projectInfoList">
         <i class="glyphicon  glyphicon-th-list" ng-click="slideLeft()"></i>
     </div>
