--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -97,7 +97,7 @@
 					</tr>
 					<tr>
 						<td>1.0-1</td>
-						<td ng-click="fadeIn();$event.stopPropagation()"><span class="text_ellipsis10 f_blue cursor_p ">用户注册</span></td>
+						<td ui-sref="index.demandDetails"><span class="text_ellipsis10 f_blue cursor_p ">用户注册</span></td>
 						<td>humq</td>
 						<td>2016-12-2 19：00</td>
 						<td>已建议</td>
