--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <head>
+    <title>TestCenter</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/angular-ui-tree.min.css">
     <link href="css/reset.css" rel="stylesheet">
