--- a/app/tpls/modal/newDemand.html
+++ b/app/tpls/modal/newDemand.html
@@ -45,10 +45,7 @@
 		</ul>
 	</div>
 	<div class="modal-footer">
-		<div class="floatleft">
-			<input type="checkbox" name="" id="ss" value="" />
-			<label for="ss">是否连续添加</label>
-		</div>
+		<div class="floatleft"><input class="floatleft" type="checkbox" name=""><em class="marginl_10">是否连续添加</em></div>
 		<button class="btn_blue" ng-click="ok()">确认</button>
 		<button class="btn_gray" ng-click="cancel()">返回</button>
 	</div>	
