--- a/app/tpls/home/main/testset/testsetManage.html
+++ b/app/tpls/home/main/testset/testsetManage.html
@@ -4,7 +4,7 @@
     <div class="projectBodyTitle">
         测试集管理
     </div>
-    <div>
+    <div class="projectBodyContent">
         <div class="useCaseTree"  ng-style="useCaseTreeStyle">
             <i class="useHide glyphicon glyphicon-header" ng-click="treeHide()"></i>
             <div class="title">测试集</div>
