--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -1,12 +1,4 @@
 <style type="text/css">
-	.treeBody {
-		border-right: 1px solid #e5e5e5;
-		position: absolute;
-		top: 50px;
-		bottom: 0px;
-		left: 0px;
-		overflow: auto;
-	}
 </style>
 <div class="projectBodyBox">
 	<div class="projectBodyTitle">
@@ -26,7 +18,7 @@
 			<input class="btn_gray " type="button" name="" id="" value="提需求" ng-click="open('newDemand','lg')" />
 		</div>
 	</div>
-	<div>		
+	<div class="projectBodyContent">		
 		<div class="useCaseTree" ng-style="useCaseTreeStyle">	
 			<i class="useHide glyphicon glyphicon-header" ng-click="treeHide()"></i>
 			<div class="title">用例组</div>			
