--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
     <title>TestCenter</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/angular-ui-tree.min.css">
+    <link rel="stylesheet" type="text/css" href="css/angular-resizable.css">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/common.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
