--- a/app/tpls/home/projectNav.html
+++ b/app/tpls/home/projectNav.html
@@ -1,26 +1,24 @@
 <style type="text/css">
-
-
 </style>
 <div class="projectNav" style="overflow: hidden;">
-    <div class="projectInfoList">
-        <i class="glyphicon  glyphicon-th-list" ng-click="slideLeft()"></i>
+    <div class="projectNavTab">
+        <i class="aricon_leftnav" ng-class="leftOut?'aricon_leftnav1':'aricon_leftnav2'" ng-click="slideLeft()"></i>
     </div>
     <div class="projectNavList">
         <ul>
-            <li ui-sref="projectInner({num2:1})" class="{{projectInnerNavNow==1?'active':''}}" ng-click="projectInnerNavNow=1">
-                <img src="images/projectNav_defect.png"> 缺陷管理
+            <li ui-sref="index" class="{{projectInnerNavNow==1?'active':''}}" ng-click="projectInnerNavNow=1">
+                <img src="images/projectNav_defect.png"> 用例管理
             </li>
-            <li ui-sref="projectInner.usecaseManage({num2:2})" class="{{projectInnerNavNow==2?'active':''}}" ng-click="projectInnerNavNow=2">
-                <img src="images/projectNav_usecase.png"> 用例管理
+            <li ui-sref="index.component" class="{{projectInnerNavNow==2?'active':''}}" ng-click="projectInnerNavNow=2">
+                <img src="images/projectNav_usecase.png"> 组件管理
             </li>
-            <li ui-sref="projectInner.groupManage({num2:3})" class="{{projectInnerNavNow==3?'active':''}}" ng-click="projectInnerNavNow=3">
-                <img src="images/projectNav_groupmanage.png"> 团队管理
+            <li ui-sref="index.testset" class="{{projectInnerNavNow==3?'active':''}}" ng-click="projectInnerNavNow=3">
+                <img src="images/projectNav_groupmanage.png"> 测试集
             </li>
-            <li ui-sref="projectInner.projectDocument({num2:4})" class="{{projectInnerNavNow==4?'active':''}}" ng-click="projectInnerNavNow=4">
+            <li  class="{{projectInnerNavNow==4?'active':''}}" ng-click="projectInnerNavNow=4">
                 <img src="images/projectNav_document.png"> 文档管理
             </li>
-            <li ui-sref="projectInner.projectReport({num2:5})" class="{{projectInnerNavNow==5?'active':''}}" ng-click="projectInnerNavNow=5">
+            <li  class="{{projectInnerNavNow==5?'active':''}}" ng-click="projectInnerNavNow=5">
                 <img src="images/projectNav_statement.png"> 报表中心
             </li>
         </ul>
