--- a/app/tpls/home/main/testset/testsetManage.html
+++ b/app/tpls/home/main/testset/testsetManage.html
@@ -6,7 +6,9 @@
     </div>
     <div class="projectBodyContent">
         <div class="useCaseTree"  ng-style="useCaseTreeStyle">
-            <i class="useHide glyphicon glyphicon-header" ng-click="treeHide()"></i>
+            <div class="aricon_treenav" ng-click="treeHide()" ng-class="treeOut?'aricon_treenav1':'aricon_treenav2'">
+                <i class="aricon_treenav_a"></i>
+            </div>
             <div class="title">测试集</div>
             <div class="treeBody">
                 <div>
