--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -20,7 +20,9 @@
 	</div>
 	<div class="projectBodyContent">		
 		<div class="useCaseTree" ng-style="useCaseTreeStyle">	
-			<i class="useHide glyphicon glyphicon-header" ng-click="treeHide()"></i>
+			<div class="aricon_treenav" ng-click="treeHide()" ng-class="treeOut?'aricon_treenav1':'aricon_treenav2'">
+                <i class="aricon_treenav_a"></i>
+            </div>
 			<div class="title">用例组</div>			
 			<div class="treeBody">
 				<div>
